--- a/src/css/accueil.css
+++ b/src/css/accueil.css
@@ -66,21 +66,21 @@ body {
 #seConnecter {
     color: #F6EEE3;
     background-color: #084C4B;
-    border-radius: 30%;
+    border-radius: 15px;
 }
 
 #hautDePage {
-
 }
 
 .hautDePage {
     color: #FCC43D;
-    font-size: 1.5em;
+    font-size: 3em;
+    padding-top: 1em;
 }
 
 .sousTexteHautDePage {
     color: #084C4B;
-    font-size: 2.2em;
+    font-size: 4em;
 }
 
 .sousTexteHautDePage2 {
@@ -98,3 +98,4 @@ body {
 a {
     text-decoration: none;
 }
+
