--- a/src/css/styleLogin.css
+++ b/src/css/styleLogin.css
@@ -16,3 +16,15 @@ button {
     font-weight: bold;
     font-size: 1.5em;
 }
+
+#btnInsc {
+    background-color: #084C4B;
+    color: #F6EEE3;
+    border-radius: 10px;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+.part {
+    padding-bottom: 1em;
+}
