--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -7,9 +7,22 @@
     grid-row-gap: 0px;
 }
 
+
 img {
     width: 100%;
-    height: 100%;
+    height: 70%;
+}
+
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    background-color: #343a40;
+    color: #fff;
+    padding-top: 20px;
 }
 
 .div1 {
